# stock_behavior_learning

./: .gitignore  README.md  main.py  pyproject.toml  q_learning_stock.ipynb  requirements.txt  save_best.sh
best_performance/: DQN_eps.txt  DQN_epsilon_greedy.txt  DQN_epsilon_greedy.weights.h5  DQN_soft.txt  DQN_softmax_method.txt  DQN_softmax_method.weights.h5  Dsarsa_eps.txt  Dsarsa_epsilon_greedy.txt  Dsarsa_epsilon_greedy.weights.h5  Dsarsa_soft.txt  Dsarsa_softmax_method.txt  Dsarsa_softmax_method.weights.h5  q_epsilon.txt  q_learning_epsilon_greedy.pkl  q_learning_epsilon_greedy.txt  q_learning_softmax_method.pkl  q_learning_softmax_method.txt  q_softmax.txt  sarsa_epsilon.txt  sarsa_epsilon_greedy.pkl  sarsa_epsilon_greedy.txt  sarsa_softmax.txt  sarsa_softmax_method.txt
model_weights/: DQN_epsilon_greedy.weights.h5  DQN_softmax_method.weights.h5  Dsarsa_epsilon_greedy.weights.h5  Dsarsa_softmax_method.weights.h5
