[project]
name = "ai-q-learning-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "scikit-optimize>=0.10.2",
    "tdqm>=0.0.1",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
